Clean CMakeLists to match find_package vars provided by FindGDAL@cmake:3.10. GDAL_VERSION is not available for cmake < 3.14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,20 @@
-# cmake needs this line
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8)  # we could bump to >3.4
+set(CMAKE_COLOR_MAKEFILE ON)
+#set(CMAKE_VERBOSE_MAKEFILE ON)
 
 # Define project name
 project(lad_project)
 
+# Looking for GDAL;: https://cmake.org/cmake/help/v3.0/module/FindGDAL.html
+find_package(GDAL 2.2 REQUIRED)
+message(STATUS "GDAL library status:")
+#message(STATUS "    version: ${GDAL_version}") # FindGDAL.cmake does not provide VERSION info for cmake < 3.13
+message(STATUS "    libraries: ${GDAL_LIBRARY}")
+message(STATUS "    include path: ${GDAL_INCLUDE_DIR}")
+
 # Find OpenCV, you may need to set OpenCV_DIR variable
 # to the absolute path to the directory containing OpenCVConfig.cmake file
-# via the command line or GUI
-
-# Looking for GDAL
-find_package(GDAL)
-message(STATUS "GDAL library status:")
-#message(STATUS "    version: ${GDAL_VERSION}")
-message(STATUS "    libraries: ${GDAL_LIBRARIES}")
-#message(STATUS "    include path: ${GDAL_includedir}")
-
-# Being honest, we could do it with 3.4.X but for future compatibility we should push to the latest LTS release
+# Being honest, we could do it with 3.4.X but for future compatibility we should push to the latest LTS release (4.2)
 find_package(OpenCV 4.2 REQUIRED
                         NO_MODULE
                         PATHS /usr/local
@@ -33,15 +32,15 @@ message(STATUS "    libraries: ${OpenCV_LIBS}")
 message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
 
 # Cross your fingers
-#find_package(CUDA)
+#find_package(CUDA) #not required yet
 
+# Greedy include of all headers
 file(GLOB PROJECT_HEADERS include/*.h)
-
 include_directories(include
                     ${OpenCV_INCLUDE_DIRS}
                     ${GDAL_INCLUDE_DIRS})
 
-# Retrieve git commit information that is forwarded at compilation time
+# Retrieve git commit information, forward it to compilation time
 exec_program(
     "git"
     ${CMAKE_CURRENT_SOURCE_DIR}
@@ -65,4 +64,3 @@ add_executable(lad_test   src/lad_test.cpp
 
 target_compile_options(lad_test PUBLIC -std=c++11)
 target_link_libraries(lad_test ${OpenCV_LIBS})
-
