Close #5 . Provide implicit geotiff scale retrieval functionality when creating LAUV footprint as kernel layer. CMake cleanup for unused targets. Add geotransform coefficient get function + define

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,20 +84,20 @@ exec_program(
 add_definitions( -DGIT_COMMIT="${GIT_INFO}" ) # Forward current git info as a single string
 
 ############################ GDAL_TEST ####################
-add_executable (lad_gdal  src/gdal_test.cpp
-                          ${GEOTIFF_MODULE}/src/geotiff.cpp
-                          ${PROJECT_HEADERS})
+#add_executable (lad_gdal  src/gdal_test.cpp
+#                          ${GEOTIFF_MODULE}/src/geotiff.cpp
+#                          ${PROJECT_HEADERS})
 
-target_compile_options(lad_gdal PUBLIC -std=c++11)
-target_link_libraries(lad_gdal ${OpenCV_LIBS} ${GDAL_LIBRARY})
+#target_compile_options(lad_gdal PUBLIC -std=c++11)
+#target_link_libraries(lad_gdal ${OpenCV_LIBS} ${GDAL_LIBRARY})
 
 ############################ LAD_TEST ####################
-add_executable(cgal_test  src/cgal_test.cpp
-                          ${PROJECT_HEADERS})
-add_to_cached_list( CGAL_EXECUTABLE_TARGETS cgal_test )
+#add_executable(cgal_test  src/cgal_test.cpp
+#                          ${PROJECT_HEADERS})
+#add_to_cached_list( CGAL_EXECUTABLE_TARGETS cgal_test )
 
-target_compile_options(cgal_test PUBLIC -std=c++11)
-target_link_libraries(cgal_test   ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} )
+#target_compile_options(cgal_test PUBLIC -std=c++11)
+#target_link_libraries(cgal_test   ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES} )
 
 ############################ LAD_TEST ####################
 add_executable(lad_test   src/lad_test.cpp
@@ -112,12 +112,13 @@ target_compile_options(lad_test PUBLIC -std=c++11)
 target_link_libraries(lad_test ${OpenCV_LIBS} ${GDAL_LIBRARY})
 
 ############################ GDAL_WRITE_TEST ####################
-add_executable (gdal_write  src/gdal_write_test.cpp
-                          ${PROJECT_HEADERS})
+#add_executable (gdal_write  src/gdal_write_test.cpp
+#                          ${PROJECT_HEADERS})
 
-target_compile_options(gdal_write PUBLIC -std=c++11)
-target_link_libraries(gdal_write ${GDAL_LIBRARY})
+#target_compile_options(gdal_write PUBLIC -std=c++11)
+#target_link_libraries(gdal_write ${GDAL_LIBRARY})
 
 
 # Define install target for main testing module
-install (TARGETS lad_test gdal_write DESTINATION $ENV{HOME}/bin)
+# install (TARGETS lad_test gdal_write DESTINATION $ENV{HOME}/bin)
+install (TARGETS lad_test DESTINATION $ENV{HOME}/bin)
