Full multithread pipeline for Lanes A, B & C. imshow needs to be moved to the end of the pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ add_executable(lad_test   src/lad_test.cpp
                           src/lad_core.cpp
                           src/lad_layer.cpp
                           src/lad_processing.cpp
+                          src/lad_thread.cpp
                           ${PROJECT_HEADERS})
 
 target_compile_options(lad_test PUBLIC -std=c++11)
