On demand recalculation of slope and height threshold according to Mehul2019-Eq[9] for any given geometry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)  # For legacy system compatibility.
+cmake_minimum_required(VERSION 3.2)
 
 set(CMAKE_COLOR_MAKEFILE ON)  # For fancy colouring scheme
 if (${FORCE_COLORED_OUTPUT})
