Add OpenMP support. Baselines tests (escape-time) for bottlenecks when converting to vector<CGAL::K::Point_3>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,14 @@ endif ()
 # Define project name
 project(lad_project)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
+
+find_package(OpenMP)
+if(OPENMP_FOUND)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
+
 # Looking for GDAL;: https://cmake.org/cmake/help/v3.0/module/FindGDAL.html
 find_package(GDAL 2.2 REQUIRED) # Newest releases of GDAL provide VERSION information
 message(STATUS "GDAL library status:")
